2008-01-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl: fix a bug on runtime-api check.
	* ext/oci8/ocidatetime.c, test/test_datetime.rb: use
	    DateTime.parse('0001-01-01 00:00:00.1') instead of 
	    DateTime.parse('00:00:00.1'). The latter doesn't work
	    on ruby 1.8.5 or earlier.
	* test/config.rb: revert the previous commit and add
	    get_oci8_connection() and get_dbi_connection() to the
	    base class of test cases. When an attempt to connect fails
	    by ORA-12516 or ORA-12520, their methods sleep one seconds
	    and try again more once.
	    delete unused method setup_lowapi().
	* test/test_bind_raw.rb, test/test_bind_time.rb,
	  test/test_break.rb, test/test_clob.rb, test/test_datetime.rb,
	  test/test_dbi.rb, test/test_dbi_clob.rb, test/test_metadata.rb,
	  test/test_object.rb, test/test_oci8.rb, test/test_oradate.rb,
	  test_oranumber.rb: revert the previous commit and use
	    get_oci8_connection() or get_dbi_connection() to make a
	    connection.

2008-01-08  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_bind_raw.rb, test/test_bind_time.rb,
	  test/test_break.rb, test/test_clob.rb, test/test_datetime.rb,
	  test/test_dbi.rb, test/test_dbi_clob.rb, test/test_metadata.rb,
	  test/test_object.rb, test/test_oci8.rb, test/test_oradate.rb,
	  test_oranumber.rb: use one OCI8 session for all OCI8 test cases
	    and use one DBI session for all DBI test cases.
	    Before this changes, connection/disconnection were called
	    for each tests. If they are done too frequently and the Oracle
	    server is on a remote server, the following error is raised.
	      OCIError: ORA-12516: TNS:listener could not find available
	      handler with matching protocol stack

2008-01-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/stmt.c: 1. add a 'pre_fetch_hook'
	    callback function to oci8_bind_class_t. This function is
	    called before OCIStmtFetch in OCI8::Cursor#fetch.